--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid {
-  display: grid;
+  /*display: grid;
   grid-template-columns: repeat(4, 284px);
-  grid-template-rows: 213px 213px 213px;
+  grid-template-rows: 213px 213px 213px; */
   gap: 16px;
   margin-top: 92px;
   margin-left: auto;
