--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,4 +6,8 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 150%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
 }
+
