--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -12,7 +12,7 @@
 }
 .body {
   text-decoration: none;
-  /* background-color: #2a2c2f; */
+  background-color: #2a2c2f; 
 }
 li {
   text-decoration: none;
