--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/lead/lead.css);
 
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/_item/intro__list_item.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/intro.css);
