--- a/blocks/paragraph/-first/paragraph-first.css
+++ b/blocks/paragraph/-first/paragraph-first.css
@@ -1,29 +1,29 @@
-.paragraph__second {
+.paragraph-first {
   max-width: 484px;
-  min-height: 203px;
+  /* min-height: 145px; */
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
   list-style: none;
-  margin-top: 26px;
+  margin-top: 50px;
 }
 @media screen and (max-width: 1023px) {
-  .paragraph__second {
+  .paragraph-first {
     max-width: 456px;
     min-height: 174px;
   }
 }
 @media screen and (max-width: 985px) {
-  .paragraph__second {
-    max-width: 352px;
-    min-height: 234px;
+  .paragraph-first {
+    max-width: 380px;
+    min-height: 174px;
   }
 }
 @media screen and (max-width: 767px) {
-  .paragraph__second {
+  .paragraph-first {
     max-width: 352px;
-    min-height: 234px;
+    min-height: 182px;
   }
 }
