--- a/blocks/paragraph/-second/paragraph-second.css
+++ b/blocks/paragraph/-second/paragraph-second.css
@@ -1,29 +1,29 @@
-.paragraph__first {
+.paragraph-second {
   max-width: 484px;
-  /* min-height: 145px; */
+  min-height: 203px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
   list-style: none;
-  margin-top: 50px;
+  margin-top: 26px;
 }
 @media screen and (max-width: 1023px) {
-  .paragraph__first {
+  .paragraph-second {
     max-width: 456px;
     min-height: 174px;
   }
 }
 @media screen and (max-width: 985px) {
-  .paragraph__first {
-    max-width: 380px;
-    min-height: 174px;
+  .paragraph-second {
+    max-width: 352px;
+    min-height: 234px;
   }
 }
 @media screen and (max-width: 767px) {
-  .paragraph__first {
+  .paragraph-second {
     max-width: 352px;
-    min-height: 182px;
+    min-height: 234px;
   }
 }
