--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -17,12 +17,17 @@
 }
 @media screen and (max-width: 320px) {
   .cover__title {
-    max-width: 288px;
-    min-height: 70px;
-    font-size: 32px;
+    font-size: 22px;
   }
 }
-@media screen and (max-width: 453px) {
+@media screen and (max-width: 402px) {
+  .cover__title {
+    max-width: 180px;
+    min-height: 45px;
+    font-size: 27px;
+  }
+}
+@media screen and (max-width: 614px) {
   .cover__title {
     max-width: 288px;
     min-height: 70px;
