--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -9,6 +9,7 @@
   color: #fff;
   text-align: right;
   margin: 0;
+  margin-right: 18px;
 }
 @media screen and (max-width: 320px) {
   .header__lang-link {
