--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,6 +2,8 @@
   width: 460px;
   height: 460px;
   background-size: contain;
+  text-decoration: none;
+  list-style: none;
 }
 @media screen and (max-width: 1023px) {
   .place__image {
