--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,13 +4,16 @@
   justify-content: space-between;
   margin-bottom: 0;
   margin-top: 10px;
+  margin-left: 108px;
   max-width: 984px;
   min-height: 660px;
   /* display: grid;
    grid-template-columns: 450px 450px;
   grid-template-rows: 450px 300px; */
 }
-
+.place:first-of-type {
+  margin-top: 92px;
+}
 @media screen and (max-width: 1023px) {
   .place {
     max-width: 928px;
