--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Inter";
-  src: url(../fonts/Inter-Regular.woff);
+  src: url(../fonts/Inter-Regular.woff) format("woff");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url(../fonts/Inter-Regular.woff2);
+  src: url(../fonts/Inter-Regular.woff2) format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -24,13 +24,13 @@
 }
 @font-face {
   font-family: "Inter";
-  src: url(../fonts/Inter-Black.woff);
+  src: url(../fonts/Inter-Black.woff) format("woff");
   font-weight: 900;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url(../fonts/Inter-Black.woff2);
+  src: url(../fonts/Inter-Black.woff2) format("woff2");
   font-weight: 900;
   font-style: normal;
 }
