--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__title/-other/place__title-other.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/website/website.css);
 @import url(../blocks/place/__list/place__list.css);
